inicio estilo serio del resto del display del componente

--- a/html/importarExcel.html
+++ b/html/importarExcel.html
@@ -67,8 +67,7 @@
         </main>
         <aside class="card">
             <div class="terminal-main-container">
-                <div id="asideContainer" class="aside-container">
-                    <!-- ... header y botones ... -->
+                <div class="aside-container">
                     <div class="terminal-header">
                         <div class="terminal-buttons">
                             <div class="terminal-btn close"></div>
@@ -77,8 +76,31 @@
                         </div>
                         <span>Barra Lateral</span>
                     </div>
+                    
+                    <div class="redirect-container">
+                        <button class="aside-button" type="button">
+                            <span class="icon">􀎞</span>
+                            Inicio
+                        </button>
+                        <button class="aside-button" type="button">
+                            <span class="icon">􀈂</span>
+                            Ingresar Datos
+                        </button>
+                        <button class="aside-button" type="button">
+                            <span class="icon">􀈄</span>
+                            Consultar Datos
+                        </button>
+                        <button class="aside-button" type="button">
+                            <span class="icon">􀈀</span>
+                            Generar Archivos
+                        </button>
+                        <button class="aside-button" type="button">
+                            <span class="icon">􀈁</span>
+                            Ingresar Archivos
+                        </button>
                     </div>
                 </div>
+            </div>
         </aside>
         <footer class="card">
             <p>footer</p>
