--- a/html/importarExcel.html
+++ b/html/importarExcel.html
@@ -13,28 +13,36 @@
     </div>
     <div class="container">
         <header class="card">
-            <h1>header</h1>
+            <div class="terminal-header">
+                <div class="terminal-buttons">
+                    <div class="terminal-btn close"></div>
+                    <div class="terminal-btn minimize"></div>
+                    <div class="terminal-btn maximize"></div>
+                </div>
+                <span></span>
+            </div>
         </header>
         <main id="importContainer" class="import-container">
             <div class="terminal-main-container">
                 <div id="buttonContainer" class="button-container">
-                    <!-- ... header y botones ... -->
                     <div class="terminal-header">
                         <div class="terminal-buttons">
                             <div class="terminal-btn close"></div>
                             <div class="terminal-btn minimize"></div>
                             <div class="terminal-btn maximize"></div>
                         </div>
-                        <span>Importar archivos Excel</span>
+                        <span></span>
                     </div>
-                        <p>Ingrese el archivo Excel a cargar !</p>
-                    <button class="terminal-button" id="mainButton">
-                        <span class="icon">􀈒</span>
-                        Subir Archivo
-                    </button>
-                    <button class="terminal-button" id="uploadButton" style="display: none;">
-                        ↑ Subir Archivo
-                    </button>
+                    <div class="cajita-descargas">
+                        <img class="import-icon" src="/assets/import-svgrepo-com.svg" alt="imagen mamalona">
+                        <p class="cajita-text">Presione el boton para poder subir sus archivos excel.</p>
+                        <button class="terminal-button" id="mainButton">
+                            <span class="icon">Subir Archivo</span>
+                        </button>
+                        <button class="terminal-button" id="uploadButton" style="display: none;">
+                                Subir Archivo
+                        </button>
+                    </div>
                 </div>
                 <!-- Panel de Errores -->
                 <div id="errorPanel" class="error-panel">
@@ -57,7 +65,7 @@
                     <!-- Footer fijo -->
                     <div class="error-panel-footer">
                         <button class="terminal-button" id="retryBtn">
-                            <span class="icon">􀎭</span>
+                            <span class="icon"></span>
                             Reintentar
                         </button>
                     </div>
@@ -66,46 +74,60 @@
             <input accept=".xlsx" type="file" id="file-input" hidden>
         </main>
         <aside class="card">
-            <div class="terminal-main-container">
-                <div class="aside-container">
-                    <div class="terminal-header">
-                        <div class="terminal-buttons">
-                            <div class="terminal-btn close"></div>
-                            <div class="terminal-btn minimize"></div>
-                            <div class="terminal-btn maximize"></div>
-                        </div>
-                        <span>Barra Lateral</span>
+            <div class="aside-container">
+                <div class="terminal-header">
+                    <div class="terminal-buttons">
+                        <div class="terminal-btn close"></div>
+                        <div class="terminal-btn minimize"></div>
+                        <div class="terminal-btn maximize"></div>
                     </div>
-                    
-                    <div class="redirect-container">
-                        <button class="aside-button" type="button">
-                            <span class="icon">􀎞</span>
-                            Inicio
-                        </button>
-                        <button class="aside-button" type="button">
-                            <span class="icon">􀈂</span>
-                            Ingresar Datos
-                        </button>
-                        <button class="aside-button" type="button">
-                            <span class="icon">􀈄</span>
-                            Consultar Datos
-                        </button>
-                        <button class="aside-button" type="button">
-                            <span class="icon">􀈀</span>
-                            Generar Archivos
-                        </button>
-                        <button class="aside-button" type="button">
-                            <span class="icon">􀈁</span>
-                            Ingresar Archivos
-                        </button>
-                    </div>
+                    <span></span>
+                </div>
+                <div class="redirect-container">
+                    <ul>
+                        <li>
+                            <button id="home" class="boton-aside" type="button">
+                                Regresar Inicio
+                                <i class="fa-solid fa-house-chimney"></i>
+                            </button>
+                        </li>
+                        <li>
+                            <button id="consult" class="boton-aside" type="button">
+                                Consultar Datos
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </button>
+                        </li >
+                        <li>
+                            <button id="insert" class="boton-aside" type="button">
+                                Insertar Datos
+                                <i class="fa-regular fa-square-plus"></i>
+                            </button>
+                        </li>
+                        <li>
+                            <button id="import" class="boton-aside" type="button">
+                                Importar Datos
+                                <i class="fa-solid fa-file-import"></i>
+                            </button>
+                        </li>
+                        <li>
+                            <button id="export" class="boton-aside" type="button">
+                                Exportar Datos
+                                <i class="fa-solid fa-download"></i>
+                            </button>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </aside>
-        <footer class="card">
-            <p>footer</p>
+        <footer class="card footer-section">
+            <div class="terminal-footerr">
+                <span class="footer-text">Direccion de Urbanismo &copy;2025 Todos los derechos reservados.</span>
+                <!-- <div class="terminal-header">
+                </div> -->
+            </div>
         </footer>
     </div>
     <script src="/js/importarExcel.js"></script>
+    <script src="https://kit.fontawesome.com/2fe13f77ea.js" crossorigin="anonymous"></script>
 </body>
 </html>
