--- a/html/importarExcel.html
+++ b/html/importarExcel.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/colors.css">
     <link rel="stylesheet" href="/css/importarExcel.css">
+    <link rel="stylesheet" href="/css/common-components.css">
     <title>Importar Excels</title>
 </head>
 <body>
@@ -122,8 +122,6 @@
         <footer class="card footer-section">
             <div class="terminal-footerr">
                 <span class="footer-text">Direccion de Urbanismo &copy;2025 Todos los derechos reservados.</span>
-                <!-- <div class="terminal-header">
-                </div> -->
             </div>
         </footer>
     </div>
