--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/colors.css">
+    <link rel="stylesheet" href="css/common-components.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Aportes Municipales</title>
 </head>
@@ -31,20 +31,6 @@
       <button id="import-btn" class="import card boton">
         <p class="generate-text">Importar Archivos</p>
         <img class="generate-img" src="./assets/typo yukari A2.png" alt="">
-      </button>
-      <button class="switch-mode" type="button">
-        <input id="switch" type="checkbox" name="switch">
-        <div class="app">
-          <nav>
-            <time class="time">4:20 AM</time>
-            <div class="icons">
-              <span class="network"></span>
-              <span class="battery"></span>
-            </div>
-          </nav>
-          <div class="circle"></div>
-          <label class="toggle-label" id="dark" for="switch"></label>
-        </div>
       </button>
       <aside class="aside-content card">
         <p class="aside-text">Datos Cargados</p>
