componente de consulta terminado

--- a/html/consultar.html
+++ b/html/consultar.html
@@ -44,25 +44,28 @@
                         <div class="ficha activa" id="ficha-year">
                             <div class="solapa">Años</div>
                             <h3 class="years-text">Seleccione el año de consulta</h3>
-                            <div class="contenido-years" id="info-card1"></div>
+                            <div class="contenido-years" id="contenido-years"></div>
                         </div>
                         <div class="ficha" id="ficha-mes">
                             <div class="solapa">Meses</div>
-                            <h3 class="container-text">Seleccione el mes de consulta</h3>
-                            <div class="contenido-mes" id="info-card2"></div>
+                            <h3 class="mes-text">Seleccione el mes de consulta</h3>
+                            <div class="contenido-mes" id="contenido-mes"></div>
                         </div>
                         <div class="ficha" id="ficha-consultar">
                             <div class="solapa">Consultar</div>
-                            <button class="terminal-button " id="consultBtn">
-                                <span class="icon">Generar Consulta</span>
-                            </button>
+                            <h3 class="mes-text">Genere la consulta</h3>
+                            <div class="contenido-a-consultar">
+                                <button class="terminal-button " id="consultBtn">
+                                    <span class="icon">Generar Consulta</span>
+                                </button>
+                            </div>
                         </div>
                         <div class="ficha" id="ficha-resultado">
                             <div class="solapa">Resultado</div>
-                            <div id="consultDatos" class="datos-consulta-container"></div>
-                            <button class="terminal-button " id="aceptarBtn">
-                                <span class="icon">Aceptar</span>
-                            </button>
+                            <h3 class="mes-text">Datos del empleado</h3>
+                            <div id="consultDatos" class="datos-consulta-container">
+                                <div id="text-container" class="text-data-container"></div>
+                            </div>
                         </div>
                     </div>
                 </section>
